修改部分文件